# link2short

./: Cargo.toml  README.md
config/: Settings.toml
src/: main.rs  settings.rs
src/api/: links.rs
