[package]
name = "link2short"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1" # version
serde ={ version = "1.0.166", features = ["derive"]}
serde_json ={version = "1.0.100"}
nanoid = "0.4.0"
config = "0.13.3"
mobc-redis = "0.8.0"
lazy_static = "1.4.0"
mobc = "0.8.1"
anyhow = "1.0.71"